Bug 74519 - When resizing window pane at the bottom in Impress/Draw it disappears
Summary: When resizing window pane at the bottom in Impress/Draw it disappears
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0 target:4.1.6 target:4.2.1
Keywords:
Depends on: 70160
Blocks:
  Show dependency treegraph
 
Reported: 2014-02-04 17:18 UTC by Ahmad Harthi
Modified: 2014-02-04 17:34 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ahmad Harthi 2014-02-04 17:18:09 UTC
Hi,

When resizing window pane at the bottom in Impress/Draw it disappears!

How to reproduce:
1. In Impress move the Slides window pane and attach it at the bottom
2. Resize the the window pane
3. It disappears!!
Comment 1 Commit Notification 2014-02-04 17:26:06 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8c01b81e81bd0598932c32bd47e59a1029660dd4

fdo#74519 - don't drag around and use an uninitialized variable.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Michael Meeks 2014-02-04 17:30:49 UTC
Fixed in master - a (very old) uninitialized variable =)
Comment 3 Commit Notification 2014-02-04 17:32:38 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7a3cac33e82a65cabae81e5bf8969c5c5853b3b2&h=libreoffice-4-1

fdo#74519 - don't drag around and use an uninitialized variable.


It will be available in LibreOffice 4.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2014-02-04 17:34:04 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5e3437c5c12166bb0be40c985db85f6e639a9d61&h=libreoffice-4-2

fdo#74519 - don't drag around and use an uninitialized variable.


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.