fdo#74519 - don't drag around and use an uninitialized variable.

Change-Id: I08b43a6658a600398b434a0c90e0e16863402b33